Nearest and Security corrections
